# sheffield_hpc

./: .drone.yml  .gitignore  FAQs.rst  README.rst  conf.py  global.rst  help.rst  hoverxref.rst  index.rst  pyproject.toml  requirements.txt  tox.ini  troubleshooting.rst
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: link-check.yml  pull-request-EL9-beta-branch.yml  pull-request.yml  static.yml
_static/css/: custom.css  (+1 more)
_templates/: genindex.html
bessemer/: cluster_specs.rst  index.rst
cheatsheets/: index.rst
decommissioned/: index.rst
hpc/: Choosing-appropriate-resources.rst  Sheffield HPC Cluster Storage Selection decision tree.drawio.xml  Sheffield-HPC-Cluster-Storage-Selection-decision-tree.drawio.xml  connecting.rst  differences.rst  filestore.rst  flight-desktop.rst  hpcgateway.rst  index.rst  installing-software.rst  jupyterhub.rst  modules.rst  sshkeys.rst  transferring-files.rst  what-is-hpc.rst
images/: hpc-file-transfer-selection-decision-tree.mmd
newsletter/: 20230131.rst  20231201.rst  20240201.rst  20240301.rst  20240415.rst  index.rst
parallel/: Hybrid.rst  MPI.rst  SMP.rst  index.rst
referenceinfo/: index.rst
sharc/: DeepLearningShARC.rst  GPUComputingShARC.rst  cluster_specs.rst  hw-accel-gfx.rst  index.rst  sge.rst  sharc-decommissioning.rst
software/: index.rst  modules.rst
stanage/: GPUComputingStanage.rst  cluster_specs.rst  index.rst  slurm.rst
stanagepilot/: index.rst  stanage-connecting-ssh.rst  stanage-filestores.rst  stanage-software-redirect.rst
using-iceberg/: filestore.rst
(+1933 files in other folders)
